objects/Optics_Sample__c.object
<CustomObject>
    <fields>
        <fullName>AM_Hand_Deliver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Hand Deliver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AOC_Custom_Details__c</fullName>
        <inlineHelpText>Fill if selecting &apos;Custom&apos; in AOC Length</inlineHelpText>
        <label>AOC Custom Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOC_Length__c</fullName>
        <label>AOC Length</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sample_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3m</fullName>
                </value>
                <value>
                    <fullName>5m</fullName>
                </value>
                <value>
                    <fullName>10m</fullName>
                </value>
                <value>
                    <fullName>15m</fullName>
                </value>
                <value>
                    <fullName>20m</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Committed_Ship_Date__c</fullName>
        <inlineHelpText>To be populated by Optics Team</inlineHelpText>
        <label>Committed Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>IF(((NOT(ISBLANK(Contact__r.MailingAddress))) &amp;&amp; (AM_Hand_Deliver__c &lt;&gt; True)) , 
Contact__r.MailingStreet &amp; &apos;,&apos; &amp; &apos; &apos; 
&amp; Contact__r.MailingCity &amp; &apos;,&apos; &amp; &apos; &apos; 
&amp; Contact__r.MailingState &amp; &apos;,&apos; &amp; &apos; &apos; 
&amp; Contact__r.MailingPostalCode &amp; &apos;,&apos; &amp; &apos; &apos; 
&amp; Contact__r.MailingCountry , 
&apos;&apos;)</formula>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Optics Samples</relationshipLabel>
        <relationshipName>Optics_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Want_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Customer Want Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ether_or_IB__c</fullName>
        <label>Ether or IB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ether</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <formula>Opportunity__r.OEM_Name__r.Name</formula>
        <label>OEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Optics Samples</relationshipLabel>
        <relationshipName>Optics_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>For TRx, quantity can ONLY be up to 5. If your Sample Type is TRx, you will only be able to enter 1,2,3,4 or 5</inlineHelpText>
        <label>Quantity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <inlineHelpText>To be populated by Optics Team</inlineHelpText>
        <label>SAP Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Type__c</fullName>
        <label>Sample Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AOC</fullName>
                </value>
                <value>
                    <fullName>TRx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <inlineHelpText>Add Address to Special Instructions if &apos;Hand Deliver&apos; is checked</inlineHelpText>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <label>Optics Sample</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Optics Sample</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optics Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Add_Address_on_Hand_Deliver</fullName>
        <active>true</active>
        <errorConditionFormula>AND((AM_Hand_Deliver__c  = True),ISBLANK(Special_Instructions__c))</errorConditionFormula>
        <errorMessage>Add Address to Special Instructions if &apos;Hand Deliver&apos; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_Custom_Details_for_AOC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(AOC_Length__c,&quot;Custom&quot;),ISBLANK(AOC_Custom_Details__c))</errorConditionFormula>
        <errorMessage>Please specify the Custom Details if  &apos;Custom&apos;  is selected in AOC Length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_can_only_be_up_to_5_forTRx</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISPICKVAL(Sample_Type__c ,&quot;TRx&quot;)),(VALUE(Quantity__c)&gt;5)
)</errorConditionFormula>
        <errorMessage>If your Sample Type is TRx, quantity can only be up to 5.</errorMessage>
    </validationRules>
</CustomObject>